== 0.1.9

This release sports much improved Before and After hooks in several areas. You can now construct more complex
boolean queries with tagged hooks. This is featured in Cucumber 0.4.4. You *must* upgrade to Cucumber 0.4.4
with this release.

For these examples this resolves to the following boolean query: (@important && @customer) || @super-important.
A comma in a String is a &&, a comma between arguments is a ||.

=== New Features
* Ability to order Java annotation hooks with @Order. (#39 Aslak Hellesøy)
* Support for boolean tag logic in Before and After hooks just like in Ruby Cucumber. (Aslak Hellesøy)
* Added Before and After hooks to Clojure. (Stu Halloway and Aslak Hellesøy)
* Simplified the WebDriverFacade in the Java WebDriver example. (Aslak Hellesøy)

=== Bugfixes
* Guice fails when trying to instantiate anonymous and non-static inner classes in step classes (#33 Martin Mauch)
* @Before("@scenario") does not work as expected (#38 Aslak Hellesøy)
* Fixed a regression from 0.1.8 where transforming Table to Object failed (now skipping transform if type is ok). (Aslak Hellesøy)

=== Changed Features
* Groovy Before and After hooks take varargs instead of an array of String. Tag logic like Ruby Cucumber. (Aslak Hellesøy
* Ioke jars are removed from Git. We're using the jars in the Maven repo instead. (Aslak Hellesøy)

== 0.1.8 2009-11-03

Several exciting news in this release - transforms, calling of steps from step definitions
and WebDriver examples.

IMPORTANT: You should upgrade to JRuby 1.4.0 and Cucumber 0.4.3.

=== New Features
* Two new examples using WebDriver (with Groovy or Java) have been added. (Aslak Hellesøy)
* Ability to call steps from step definitions in Scala. (Jon-Anders Teigen)
* Ability to call steps from step definitions in Guice. (Henning Jensen)
* A new @Transform is used to annotate methods that converts a string to specific type. 
  See examples/java/features/transform.feature an example of how it's done (Torbjørn Vatn)
